force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Additional_SOQL__c.field-meta.xml
<CustomField>
    <fullName>cpm__Additional_SOQL__c</fullName>
    <inlineHelpText>Se usa directamente, sin ningún cambio o procesamiento, en el campo SOQL adicional de los registros de programación de cobros generados. Consulte la documentación del Programa de cobros para obtener más ayuda en este campo.</inlineHelpText>
    <label>Additional SOQL</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>