force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Collect_on_Saturday__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collect_on_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if payment schedules should be generated will collection dates on Saturday.</inlineHelpText>
    <label>Collect on Saturday</label>
    <type>Checkbox</type>
</CustomField>