force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__End_Date__c</fullName>
    <inlineHelpText>Fecha de finalización del período para el que se generarán los registros de programación de cobros. Los registros de programación de cobros se generarán con una fecha de cobro hasta la fecha de finalización, pero no después de la fecha de finalización.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>