force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Finished_Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Finished_Status__c</fullName>
    <inlineHelpText>Se usa directamente, sin ningún cambio o procesamiento, en el campo Estado finalizado de los registros de Programación de cobros generados. Consulte la documentación del Programa de cobros para obtener más ayuda en este campo.</inlineHelpText>
    <label>Finished Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- Provided by Sys Admin --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>