force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Initial_Generated_JSON__c.field-meta.xml
<CustomField>
    <fullName>cpm__Initial_Generated_JSON__c</fullName>
    <inlineHelpText>Campo de registro rellenado por sistema. No se debe cambiar. Contiene la vista previa de los ficheros de progrmación de cobro generados json antes de cualquier cambio por parte del usuario.</inlineHelpText>
    <label>Initial Generated JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>