force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Monthly_Collection_Day_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cpm__Monthly_Collection_Day_Strategy__c</fullName>
    <inlineHelpText>Estrategia utilizada para calcular el día de cobro. Estrategias disponibles: -Día del mes: se usará el día del mes especificado en el campo Día de cobro selectiva del mes. -Primer lunes: primer lunes de este mes -Último viernes: último viernes de este mes</inlineHelpText>
    <label>Monthly Collection Day Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day of Month</fullName>
            </value>
            <value>
                <fullName>First Monday</fullName>
            </value>
            <value>
                <fullName>Last Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>