force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Repeat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>cpm__Repeat_Frequency__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Mejor explicado con un ejemplo. Si el valor es 3: -Semanalmente: los registros de la Programación de cobros se generarán una vez cada 3 semanas. -Mensualmente: los registros de la programación de cobros se generarán cada trimestre.</inlineHelpText>
    <label>Repeat Frequency</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>