force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Run_of_Days_before_Collection_date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Run_of_Days_before_Collection_date__c</fullName>
    <inlineHelpText>Se usa para calcular la fecha de ejecución. La fecha de cobro se calcula primero y luego este campo se utiliza para determinar la fecha de ejecución. Si se adjunta un registro de Horario comercial, se restarán los días hábiles.</inlineHelpText>
    <label>Run # of Business Days before Coll. Date</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>