force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Selection_Day_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cpm__Selection_Day_Strategy__c</fullName>
    <inlineHelpText>Estrategia utilizada para calcular el día de selección. Estrategias disponibles: \ n- Igual que la Fecha de cobro: Igual que la Fecha de cobro. \ N- Último día del mes: último día de este mes.</inlineHelpText>
    <label>Selection Day Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Collection Date</fullName>
            </value>
            <value>
                <fullName>Last day of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>