force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Start_Date__c</fullName>
    <inlineHelpText>Fecha de inicio del período para el que se generarán los registros de programación de cobros. Los registros de programación de cobros se generarán con una fecha de cobro a partir de la fecha de inicio, pero no antes de la fecha de inicio.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>