force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <inlineHelpText>Debe ser Nuevo para los nuevos registros del Programa de cobros recurrente y Generado después de que se hayan generado los registros del Programa de Cobros. El sistema establecerá el estado en Generado después de que se hayan generado los registros.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>