force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Stored_JSON__c.field-meta.xml
<CustomField>
    <fullName>cpm__Stored_JSON__c</fullName>
    <inlineHelpText>Campo de registro llenado por sistema. No se debe cambiar. Contiene la vista previa de los Ficheros de programación de cobros json después de cualquier cambio por parte del usuario.</inlineHelpText>
    <label>Stored JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>