force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/recordTypes/cpm__Monthly.recordType-meta.xml
<RecordType>
    <fullName>cpm__Monthly</fullName>
    <active>true</active>
    <label>Monthly</label>
</RecordType>